--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ packages = [{include = "equator"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
+sympy = "^1.12"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.2"
